fix columns on mobile screens (missing clearfix)

--- a/src/pretix/static/pretixpresale/scss/widget.scss
+++ b/src/pretix/static/pretixpresale/scss/widget.scss
@@ -967,6 +967,11 @@
     float: none;
     margin-bottom: 5px;
   }
+  .pretix-widget-item-info-col:after {
+    display: block;
+    content: "";
+    clear: both;
+  }
   .pretix-widget-item-price-col, .pretix-widget-item-availability-col {
     width: 50%;
   }
